--- a/website/site-static/sass/apps/_playlist_editor.sass
+++ b/website/site-static/sass/apps/_playlist_editor.sass
@@ -135,6 +135,7 @@
           span
             text-align: right
             color: #5a5a5a
+            color: rgba(90, 90, 90, 0)
             padding-right: 2px
         input
           font-size: 11px
