--- a/website/site-static/sass/bootstrap/addons/font-awesome-3.2.1/_icons.scss
+++ b/website/site-static/sass/bootstrap/addons/font-awesome-3.2.1/_icons.scss
@@ -379,3 +379,9 @@
 .icon-vk:before { content: $vk; }
 .icon-weibo:before { content: $weibo; }
 .icon-renren:before { content: $renren; }
+
+
+// custom aliases
+// TODO: maybe move
+.icon-google:before { content: $google-plus; }
+.icon-google-oauth2:before { content: $google-plus; }
