--- a/website/site-static/sass/screen.sass
+++ b/website/site-static/sass/screen.sass
@@ -22,6 +22,7 @@
 @import element/sitemessages
 @import element/markdown
 @import element/dialog
+@import element/socialauth
 
 /* legacy styles */
 @import element/legacy/colorbox
