--- a/website/templates/importer/template-import.html
+++ b/website/templates/importer/template-import.html
@@ -60,7 +60,7 @@
 				<input type="checkbox">
 				<ul class="horizontal unstyled">
 					<li class="key">
-						Title
+						Title&nbsp;
 					</li>
 					<li class="value"></li>
 				</ul> </label>
@@ -70,7 +70,7 @@
 				<input type="checkbox">
 				<ul class="horizontal unstyled">
 					<li class="key">
-						Release
+						Release&nbsp;
 					</li>
 					<li class="value"></li>
 				</ul> </label>
@@ -83,7 +83,7 @@
 				<input type="checkbox">
 				<ul class="horizontal unstyled">
 					<li class="key">
-						Artist
+						Artist&nbsp;
 					</li>
 					<li class="value"></li>
 				</ul> </label>
@@ -93,7 +93,7 @@
 				<input type="checkbox">
 				<ul class="horizontal unstyled">
 					<li class="key">
-						Label
+						Label&nbsp;
 					</li>
 					<li class="value"></li>
 				</ul> </label>
@@ -106,7 +106,7 @@
 				<input type="checkbox">
 				<ul class="horizontal unstyled">
 					<li class="key">
-						TrackNo
+						TrackNo&nbsp;
 					</li>
 					<li class="value"></li>
 				</ul> </label>
@@ -116,7 +116,7 @@
 				<input type="checkbox">
 				<ul class="horizontal unstyled">
 					<li class="key">
-						Date
+						Date&nbsp;
 					</li>
 					<li class="value"></li>
 				</ul> </label>
