--- a/website/apps/abcast/templates/abcast/schedule.html
+++ b/website/apps/abcast/templates/abcast/schedule.html
@@ -83,6 +83,9 @@
             $(function () {
 
                 scheduler.app = new SchedulerApp();
+
+                scheduler.app.readonly = {% if user.is_authenticated %}false{% else %}true{% endif %};
+
                 scheduler.app.range = [{% for date in days %}'{{ date|date:"Y-m-d" }}',{% endfor %}]
                 scheduler.app.api_url = "{% url api_dispatch_list resource_name='abcast/emission' api_name='v1'%}";
                 scheduler.app.channel_id = {{ channel.pk }};
