--- a/website/apps/alibrary/templates/alibrary/artist/list_item_l.html
+++ b/website/apps/alibrary/templates/alibrary/artist/list_item_l.html
@@ -109,7 +109,7 @@
 
         <ul class="unstyled action secondary horizontal clearfix">
 
-
+            {% comment %}
             <li>
                 <a href="#"
                    class="{% if not user.is_authenticated %} disabled{% endif %}"
@@ -128,6 +128,7 @@
                     <i class="icon icon-download-alt"></i>
                 </a>
             </li>
+            {% endcomment %}
 
             {% if  perms.alibrary.edit_release %}
                 <li>
