--- a/website/apps/profiles/templates/profiles/profile/sidebar/context/_edit.html
+++ b/website/apps/profiles/templates/profiles/profile/sidebar/context/_edit.html
@@ -18,16 +18,16 @@
 	<div class="social-auth">
 		
 		<h4>{% trans "Connected accounts" %}</h4>
-		<ul class="unstyled">
+		<ul class="unstyled connected">
 			{% for service in social_auth.associated %}
-			<li><i class="icon-{{ service.provider }}"></i>{{ service }} <a class="" href="{% url socialauth_disconnect service.provider %}?next={{ request.get_full_path }}">({% trans "disconnect" %})</a></li>
+			<li><i class="icon-{{ service.provider }}"></i><span class="service">{{ service|title }}</span><a class="pull-right" href="{% url socialauth_disconnect service.provider %}?next={{ request.get_full_path }}">{% trans "disconnect" %}</a></li>
 			{% endfor %}
 		</ul>
 		
 		<h4>{% trans "Available accounts" %}</h4>
-		<ul class="unstyled">
+		<ul class="unstyled available">
 			{% for service in social_auth.not_associated %}
-			<li><i class="icon-{{ service }}"></i>{{ service }} <a href="{% url socialauth_begin service %}?next={{ request.get_full_path }}">({% trans "connect" %})</a></li>
+			<li><i class="icon-{{ service }}"></i><span class="service">{{ service|title }}</span><a class="pull-right" href="{% url socialauth_begin service %}?next={{ request.get_full_path }}">{% trans "connect" %}</a></li>
 			{% endfor %}
 		</ul>
 	</div>
