--- a/website/apps/profiles/templates/profiles/profile_form.html
+++ b/website/apps/profiles/templates/profiles/profile_form.html
@@ -46,6 +46,19 @@
 
 
 {% block form %}
+
+    {% if form_errors %}
+    {% include "element/forms/_merged_form_errors.html" %}
+    {% endif %}
+
+    {% comment %}
+    {% if profile_form.errors or profile_form.non_field_errors %}
+        {% with form=profile_form ctype='playlist'%}
+        {% include "element/forms/_merged_form_errors.html" %}
+        {% endwith %}
+    {% endif %}
+    {% endcomment %}
+
 <form action="." method="post" enctype="multipart/form-data" class="profile_form form-horizontal form-compact">
 	{% csrf_token %}
 
