--- a/website/apps/registration/templates/registration/_social_auth.html
+++ b/website/apps/registration/templates/registration/_social_auth.html
@@ -3,13 +3,10 @@
   <h4>{% trans "Or use an existing account" %}:</h4>
   
   <ul class="social-auth unstyled horizontal">
-  {% for name in social_auth.backends %}
+  {% for service in social_auth.backends %}
   <li>
-  	
-  	<a href="{% url socialauth_begin name %}?{{ redirect_querystring }}">
-  		<i class="icon-{{ name }}"></i>{{ name|title }}
-  	</a>
+    <i class="icon-{{ service }}"></i>
+  	<a href="{% url socialauth_begin service %}?{{ redirect_querystring }}">{{ service|title }}</a>
   </li>
-  <li>&nbsp;&nbsp;&nbsp;</li>
   {% endfor %}
   </ul>
