playlist dummy loading

--- a/website/site-static/css/screen.css
+++ b/website/site-static/css/screen.css
@@ -13436,6 +13436,12 @@ body .subhead .icontitle {
   font-style: italic;
 }
 
+/* line 36, ../sass/site/_style.sass */
+body.loading-playlist {
+  opacity: 0.2;
+  cursor: wait;
+}
+
 /* line 3, ../sass/apps/_arating.sass */
 ul.arating {
   *zoom: 1;
