--- a/website/site-static/sass/site/_style.sass
+++ b/website/site-static/sass/site/_style.sass
@@ -24,3 +24,15 @@ body
     font-family: "Times New Roman", Times, serif
     font-weight: 700
     font-style: italic
+
+
+
+
+
+
+
+// player haks / states
+
+body.loading-playlist
+  opacity: 0.2
+  cursor: wait
