--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -261,7 +261,7 @@
         nj = nunjucks_register_filters(nj);
 
 
-        // debug.setLevel(0);
+        debug.setLevel(0);
 
         base.ui.init();
 
