--- a/website/apps/alibrary/templates/alibrary/artist/list_item_l.html
+++ b/website/apps/alibrary/templates/alibrary/artist/list_item_l.html
@@ -17,7 +17,7 @@
 
         <ul class="tags unstyled horizontal">
             {% for tag in item.tags|slice:":8" %}
-                <li class="{% if tag.pk in active_tags %}active{% endif %}">{{ tag.name|truncate_chars_inner:10 }}</li>
+                <li class="{% if tag.pk in active_tags %}__active{% endif %}">{{ tag.name|truncate_chars_inner:10 }}</li>
             {% endfor %}
         </ul>
 
