--- a/website/site-static/sass/apps/_exporter.sass
+++ b/website/site-static/sass/apps/_exporter.sass
@@ -7,6 +7,11 @@ div.listview.export
   thead th
     background-color: white
 
+    font-weight: normal
+    font-style: italic
+    color: #999
+    border: none
+
 
   [class^="visible-while-"], [class*=" visible-while-"]
     display: none
@@ -49,7 +54,9 @@ div.listview.export
         
 
 
-
+    td small
+      font-size: 88%
+      opacity: 0.7
 
     .action.download
       a
