--- a/website/templates/layout_base.html
+++ b/website/templates/layout_base.html
@@ -11,6 +11,9 @@
 <div class="row">
 	<section>
 		<div class="span9">
+
+            <h1>TEST</h1>
+
 			{% block tagcloud %}{% endblock %}
 			{% block searchbar %}{% endblock %}
 			{% block inner %}{% endblock %}
