--- a/website/apps/exporter/templates/exporter/export_list.html
+++ b/website/apps/exporter/templates/exporter/export_list.html
@@ -40,7 +40,7 @@
 
         <div class="page-header">
             <h2>{% trans "Your Downloads" %}
-                <small>{% trans "Please note that downloads older than 10 days will get removed automatically." %}</small>
+                <small></small>
             </h2>
         </div>
 
